--- a/configs/deen_transformer_pre.yaml
+++ b/configs/deen_transformer_pre.yaml
@@ -83,6 +83,7 @@ model:
         hidden_size: 256
         ff_size: 512
         dropout: 0
+        layer_norm: "pre"
     decoder:
         type: "transformer"
         num_layers: 1
@@ -94,3 +95,4 @@ model:
         hidden_size: 256
         ff_size: 512
         dropout: 0
+        layer_norm: "pre"
